--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="href="https://Yee1955.github.io/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="https://Yee1955.github.io/css/bootstrap.css" />
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="href="https://Yee1955.github.io/css/style.css" rel="stylesheet" />
+  <link href="https://Yee1955.github.io/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="href="https://Yee1955.github.io/css/responsive.css" rel="stylesheet" />
+  <link href="https://Yee1955.github.io/css/responsive.css" rel="stylesheet" />
 
 
 
