--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Botpress Web Chat Styling Example</title>
-  <link rel="stylesheet" href="href="https://Yee1955.github.io/style.css" />
+  <link rel="stylesheet" href="https://Yee1955.github.io/style.css" />
 
 </head>
 
