--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-md-6 px-0">
           <div class="img-box">
-            <img src="href="https://Yee1955.github.io/images/avatar.jpeg" alt="">
+            <img src="https://Yee1955.github.io/images/avatar.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-5">
