--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-md-6 px-0">
           <div class="img-box">
-            <img src="https://Yee1955.github.io/images/avatar.jpeg" alt="">
+            <img src="images/avatar.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-5">
@@ -89,7 +89,7 @@
 
       <div class="fruit_container">
         <div class="box">
-          <img src="images/f-1.jpg" alt="">
+          <img src="https://Yee1955.github.io/images/f-1.jpg" alt="">
           <div class="link_box">
             <h5>
               Okra Care
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/f-2.jpg" alt="">
+          <img src="https://Yee1955.github.io/images/f-2.jpg" alt="">
           <div class="link_box">
             <h5>
               Planting Okra
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/f-3.jpg" alt="">
+          <img src="https://Yee1955.github.io/images/f-3.jpg" alt="">
           <div class="link_box">
             <h5>
               Identifying Okra Diseases
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/f-4.jpg" alt="">
+          <img src="https://Yee1955.github.io/images/f-4.jpg" alt="">
           <div class="link_box">
             <h5>
               Understanding Okra
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/f-5.jpg" alt="">
+          <img src="https://Yee1955.github.io/images/f-5.jpg" alt="">
           <div class="link_box">
             <h5>
               Exploring Okra Types
@@ -144,7 +144,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/f-6.jpg" alt="">
+          <img src="https://Yee1955.github.io/images/f-6.jpg" alt="">
           <div class="link_box">
             <h5>
               Location Suitability for Okra
