--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Ninom</title>
+  <title>MissOkra</title>
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
   <!-- bootstrap core css -->
@@ -27,7 +27,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Botpress Web Chat Styling Example</title>
-  <link rel="stylesheet" href="https://Yee1955.github.io/style.css" />
+  <link rel="stylesheet" href="https://Yee1955.github.io/css/style.css" />
 
 </head>
 
