--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>MissOkra</title>
+  <title>Ninom</title>
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
   <!-- bootstrap core css -->
@@ -27,7 +27,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Botpress Web Chat Styling Example</title>
-  <link rel="stylesheet" href="https://Yee1955.github.io/css/style.css" />
+  <link rel="stylesheet" href="https://Yee1955.github.io/style.css" />
 
 </head>
 
@@ -89,7 +89,7 @@
 
       <div class="fruit_container">
         <div class="box">
-          <img src="https://Yee1955.github.io/images/f-1.jpg" alt="">
+          <img src="images/f-1.jpg" alt="">
           <div class="link_box">
             <h5>
               Okra Care
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="https://Yee1955.github.io/images/f-2.jpg" alt="">
+          <img src="images/f-2.jpg" alt="">
           <div class="link_box">
             <h5>
               Planting Okra
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="https://Yee1955.github.io/images/f-3.jpg" alt="">
+          <img src="images/f-3.jpg" alt="">
           <div class="link_box">
             <h5>
               Identifying Okra Diseases
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="https://Yee1955.github.io/images/f-4.jpg" alt="">
+          <img src="images/f-4.jpg" alt="">
           <div class="link_box">
             <h5>
               Understanding Okra
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="https://Yee1955.github.io/images/f-5.jpg" alt="">
+          <img src="images/f-5.jpg" alt="">
           <div class="link_box">
             <h5>
               Exploring Okra Types
@@ -144,7 +144,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="https://Yee1955.github.io/images/f-6.jpg" alt="">
+          <img src="images/f-6.jpg" alt="">
           <div class="link_box">
             <h5>
               Location Suitability for Okra
