--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="hero_area">
     <!-- header section strats -->
     <div class="brand_box">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="https://Yee1955.github.io/index.html">
         <span>
           Miss Okra
         </span>
