--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Miss Okra</title>
+  <title>Ninom</title>
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="https://github.com/Yee1955/missokra.github.io.git/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="https://github.com/Yee1955/missokra.github.io.git/css/style.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="https://github.com/Yee1955/missokra.github.io.git/css/responsive.css" rel="stylesheet" />
+  <link href="css/responsive.css" rel="stylesheet" />
 
 
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Botpress Web Chat Styling Example</title>
-  <link rel="stylesheet" href="https://github.com/Yee1955/missokra.github.io.git/style.css" />
+  <link rel="stylesheet" href="style.css" />
 
 </head>
 
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-md-6 px-0">
           <div class="img-box">
-            <img src="https://github.com/Yee1955/missokra.github.io.git/images/avatar.jpeg" alt="">
+            <img src="images/avatar.jpeg" alt="">
           </div>
         </div>
         <div class="col-md-5">
